feat: add 1746 endpoint, add wallet endpoint
